# knowledge_graph_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  knowledge_graph_rag.py  pyproject.toml
src/citation_graph_rag/: __init__.py  config.py  prompts.py  samples.py  text.py
src/citation_graph_rag/adapters/: neo4j_gateway.py  ollama_gateway.py
src/citation_graph_rag/domain/: __init__.py  models.py
src/citation_graph_rag/services/: ingestion.py  question_answering.py
tests/: test_prompts.py  test_question_answering.py  test_text.py
