[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-rag"
version = "0.1.0"
description = "Evidence-backed local retrieval over a Neo4j knowledge graph."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "neo4j>=5.20,<6.0",
  "ollama>=0.3,<1.0",
  "streamlit>=1.35,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
